// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineMessage should render with higligthed background 1`] = `
<div
  className="tc-inline-message theme-tc-inline-message"
>
  <span
    className="tc-inline-message-wrapper theme-tc-inline-message-wrapper success theme-success background theme-background"
  >
    <span
      className="tc-inline-message-icon theme-tc-inline-message-icon success theme-success"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        name="talend-check-circle"
        title={null}
      >
        <use
          xlinkHref="#talend-check-circle"
        />
      </svg>
    </span>
    <span>
      <span
        className="tc-inline-message-title theme-tc-inline-message-title"
      >
        Validation title.
      </span>
      <span
        className="tc-inline-message-description theme-tc-inline-message-description"
      >
        Validation and successful messages
      </span>
    </span>
  </span>
</div>
`;

exports[`InlineMessage should render with icon and description 1`] = `
<div
  className="tc-inline-message theme-tc-inline-message"
>
  <span
    className="tc-inline-message-wrapper theme-tc-inline-message-wrapper success theme-success"
  >
    <span
      className="tc-inline-message-icon theme-tc-inline-message-icon success theme-success"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        name="talend-check-circle"
        title={null}
      >
        <use
          xlinkHref="#talend-check-circle"
        />
      </svg>
    </span>
    <span>
      
      <span
        className="tc-inline-message-description theme-tc-inline-message-description"
      >
        Validation and successful messages
      </span>
    </span>
  </span>
</div>
`;

exports[`InlineMessage should render with icon, title and description 1`] = `
<div
  className="tc-inline-message theme-tc-inline-message"
>
  <span
    className="tc-inline-message-wrapper theme-tc-inline-message-wrapper success theme-success"
  >
    <span
      className="tc-inline-message-icon theme-tc-inline-message-icon success theme-success"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        name="talend-check-circle"
        title={null}
      >
        <use
          xlinkHref="#talend-check-circle"
        />
      </svg>
    </span>
    <span>
      <span
        className="tc-inline-message-title theme-tc-inline-message-title"
      >
        Validation title.
      </span>
      <span
        className="tc-inline-message-description theme-tc-inline-message-description"
      >
        Validation and successful messages
      </span>
    </span>
  </span>
</div>
`;

exports[`InlineMessage should render with icon, title, description and link 1`] = `
<div
  className="tc-inline-message theme-tc-inline-message"
>
  <span
    className="tc-inline-message-wrapper theme-tc-inline-message-wrapper success theme-success"
  >
    <span
      className="tc-inline-message-icon theme-tc-inline-message-icon success theme-success"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        name="talend-check-circle"
        title={null}
      >
        <use
          xlinkHref="#talend-check-circle"
        />
      </svg>
    </span>
    <span>
      <span
        className="tc-inline-message-title theme-tc-inline-message-title"
      >
        Validation title.
      </span>
      <span
        className="tc-inline-message-description theme-tc-inline-message-description"
      >
        Validation and successful messages
      </span>
      <a
        className="tc-inline-message-link theme-tc-inline-message-link"
        href="https://my.custom.link"
      >
        See more
      </a>
    </span>
  </span>
</div>
`;

exports[`InlineMessage should render with title and description 1`] = `
<div
  className="tc-inline-message theme-tc-inline-message"
>
  <span
    className="tc-inline-message-wrapper theme-tc-inline-message-wrapper success theme-success"
  >
    <span
      className="tc-inline-message-icon theme-tc-inline-message-icon success theme-success"
    >
      <div
        className="alert alert-danger"
      >
        Icon: no name provided
      </div>
    </span>
    <span>
      <span
        className="tc-inline-message-title theme-tc-inline-message-title"
      >
        Validation title.
      </span>
      <span
        className="tc-inline-message-description theme-tc-inline-message-description"
      >
        Validation and successful messages
      </span>
    </span>
  </span>
</div>
`;
